--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
-        <a href="images/Resume.pdf" class="btn" target="_blank">Resume</a>
+        <a href="images/Resume.pdf" class="btn" id="resume-btn" target="_blank"
+          >Resume</a
+        >
       </div>
       <div class="home-img">
         <img src="images/profile.jpg" alt="image" />
